# BoAt

./: .gitignore  AGENTS.md  README.md  ideas_backlog.txt  opencode.jsonc  start_ui.sh  stop_ui.sh
boat-platform/: CMakeLists.txt  CMakePresets.json  Dockerfile.dev  Dockerfile.runtime  Projectplan.md  README.md  Technicalplan.md  docker-compose.yml  project-plan.md  sprint-14-hardening.md
boat-platform/.github/workflows/: ci.yml  release.yml
boat-platform/ai/: llm-cost-control.md
boat-platform/api/: api-specification.md  protobuf-definitions.md
boat-platform/architecture/: data-model.md  ipc-architecture.md  module-structure.md  scalability-strategy.md  system-architecture.md
boat-platform/cli/: pyproject.toml
boat-platform/cli/boat_cli/: ai_config.py  bus_setup_context.py  can.py  can_tp.py  cli_context.py  db.py  eth.py  gen.py  gen_context.py  main.py  output.py  pdu.py  plugin.py  replay.py  scenario.py  sim.py  trace.py
boat-platform/cli/tests/: test_ai.py  test_cli_commands.py  test_cli_output.py
boat-platform/cmake/: BoAtPlugin.cmake  BoAtProto.cmake  Packaging.cmake
boat-platform/config/: gen_pdu_db_test.py  pdu_db.schema.json  pdu_db_test.json
boat-platform/config/tests/: env_virtual.json
boat-platform/core/: CMakeLists.txt
boat-platform/core/determinism/: determinism_engine.cpp  determinism_engine.h
boat-platform/core/event/: event_bus.cpp  event_bus.h
boat-platform/core/fault/: fault_injector.cpp  fault_injector.h
boat-platform/core/plugin/: plugin_manager.cpp  plugin_manager.h
boat-platform/core/scenario/: scenario_loader.cpp  scenario_loader.h
boat-platform/core/scheduler/: sim_clock.cpp  sim_clock.h  tick_scheduler.cpp  tick_scheduler.h
boat-platform/core/signal/: signal_router.cpp  signal_router.h
boat-platform/core/state/: sim_state_machine.cpp  sim_state_machine.h
boat-platform/database/: database-design.md
boat-platform/demo/: can_responder_node.py  commander.py  control_panel.py  dashboard.py  debug.py  flow_editor.py  flow_executor.py  launcher.py  recorder.py  start_all.sh  stop_all.sh  system_dashboard.py
boat-platform/demo/flows/: a05c0b3c.json
boat-platform/demo/pdu_features/: 04_can_tp_example.sh
boat-platform/demo/tcp_plugin/: tcp_echo_server.py  tcp_http_get.py  tcp_listen_server.py  tcp_nc.py  tcp_pcap_replay.py  tcp_relay.py  tcp_send_client.py
boat-platform/devops/: ci-cd.md  deployment-plan.md
boat-platform/diagrams/: class-diagrams.md  sequence-diagrams.md  system-diagram.md
boat-platform/docs/: index.html  project.html
boat-platform/docs/api/: api-specification.md  protobuf-definitions.md
boat-platform/docs/architecture/: module-structure.md  system-architecture.md
boat-platform/docs/diagrams/: system-diagram.md
boat-platform/docs/howto/: dbc2boatjson.md  replay.md
boat-platform/docs/pipeline/: data-processing-pipeline.md
boat-platform/docs/product/: user-flows.md  ux-concepts.md
boat-platform/docs/risks/: risk-analysis.md
boat-platform/docs/testing/: test-howto.html  test-plan.md
boat-platform/gateway/: CMakeLists.txt
boat-platform/gateway/grpc_gateway/: CMakeLists.txt  bus_service_impl.h  can_service_impl.cpp  ethernet_service_impl.cpp  fault_service_impl.cpp  fault_service_impl.h  gateway_context.h  main.cpp  metrics_service_impl.cpp  metrics_service_impl.h  pdu_service_impl.cpp  pdu_service_impl.h  plugin_service_impl.cpp  plugin_service_impl.h  replay_service_impl.cpp  replay_service_impl.h  scenario_service_impl.cpp  scenario_service_impl.h  signal_service_impl.cpp  signal_service_impl.h  simulation_service_impl.cpp  simulation_service_impl.h  trace_service_impl.cpp  trace_service_impl.h
boat-platform/hil/: CMakeLists.txt  can_bus_registry.cpp  can_bus_registry.h  ethernet_bus_registry.cpp  ethernet_bus_registry.h  hil_bridge.cpp  hil_bridge.h
boat-platform/hil/can/: socket_can_driver.cpp  socket_can_driver.h
boat-platform/hil/ethernet/: ethernet_frame.h  raw_socket_ethernet_driver.cpp  virtual_ethernet_driver.cpp
boat-platform/hil/hal/: hal_driver.h
boat-platform/hil/pdu/: pdu_router.cpp  pdu_router.h  pdu_types.h
boat-platform/hil/virtual/: virtual_can_driver.cpp  virtual_can_driver.h
boat-platform/ipc/: CMakeLists.txt
boat-platform/ipc/grpc/: grpc_server.cpp  grpc_server.h
boat-platform/ipc/shm/: shm_publisher.cpp  shm_publisher.h  shm_subscriber.cpp  shm_subscriber.h
boat-platform/ipc/uds/: uds_client.cpp  uds_client.h  uds_framing.cpp  uds_framing.h  uds_server.cpp  uds_server.h  uds_types.h
boat-platform/nodes/: payload_configurator_node.py
boat-platform/pipeline/: data-processing-pipeline.md
boat-platform/plugins/: CMakeLists.txt
boat-platform/plugins/can_responder/: CMakeLists.txt  can_responder_plugin.cpp
boat-platform/plugins/network_sim/: CMakeLists.txt  network_sim_plugin.cpp  network_sim_plugin.h
boat-platform/plugins/sensor_model/: CMakeLists.txt  sensor_model_plugin.cpp  sensor_model_plugin.h
boat-platform/plugins/vehicle_dynamics/: CMakeLists.txt  vehicle_dynamics_plugin.cpp  vehicle_dynamics_plugin.h
boat-platform/product/: epics.md  user-flows.md  ux-concepts.md
boat-platform/replay/: CMakeLists.txt
boat-platform/replay/replay_engine/: replay_engine.cpp  replay_engine.h
boat-platform/risks/: risk-analysis.md
boat-platform/sdk/cpp/: CMakeLists.txt
boat-platform/sdk/python/: pyproject.toml
boat-platform/src/core/: CMakeLists.txt
boat-platform/src/hil/: CMakeLists.txt  can_bus_registry.cpp  can_bus_registry.h  ethernet_bus_registry.cpp  ethernet_hil_bridge.cpp  hil_bridge.cpp
boat-platform/src/plugins/: CMakeLists.txt
boat-platform/src/replay/: CMakeLists.txt
boat-platform/src/tests/: CMakeLists.txt
boat-platform/store/: CMakeLists.txt
boat-platform/store/config_store/: config_store.cpp  config_store.h
boat-platform/store/event_store/: event_store.cpp  event_store.h
boat-platform/store/trace_store/: trace_store.cpp  trace_store.h
boat-platform/testing/: test-plan.md  test-strategy.md
boat-platform/tests/: CMakeLists.txt
boat-platform/tests/determinism/: test_seed.cpp
tools/: pdu_editor.py  (+2 more)
(+194 files in other folders)
